--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,34 @@
 [project]
 name = "medical-guideline-rag"
-version = "0.1.0"
-description = "Add your description here"
+version = "1.0.0"
+description = "AI-powered medication advisor using RAG and medical literature"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "bio>=1.8.0",
+    "python-dotenv>=1.0.0",
     "fastapi>=0.116.1",
+    "uvicorn>=0.18.0",
+    "pydantic>=2.0.0",
+    "streamlit>=1.28.0",
+    "requests>=2.31.0",
+    "google-generativeai>=0.3.0",
+    "sentence-transformers>=2.2.2",
+    "faiss-cpu>=1.7.4",
+    "spacy>=3.7.0",
+    "numpy>=1.24.0",
+    "pandas>=2.0.0",
+    "scikit-learn>=1.3.0",
+]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src", "app", "ui", "config"]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
 ]
