--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,15 @@ dependencies = [
     "google-generativeai>=0.3.0",
     "sentence-transformers>=2.2.2",
     "faiss-cpu>=1.7.4",
-    "spacy>=3.7.0",
+    "spacy[lookups]>=3.7.0",
     "numpy>=1.24.0",
     "pandas>=2.0.0",
     "scikit-learn>=1.3.0",
+    "pip>=25.2",
+    "nltk>=3.9.1",
+    "pypdf2>=3.0.1",
+    "transformers>=4.55.2",
+    "accelerate>=1.10.0",
 ]
 
 [build-system]
@@ -30,5 +35,11 @@ packages = ["src", "app", "ui", "config"]
 
 [dependency-groups]
 dev = [
+    "black>=25.1.0",
+    "flake8>=7.3.0",
+    "httpx>=0.28.1",
+    "isort>=6.0.1",
     "pytest>=8.4.1",
+    "pytest-asyncio>=1.1.0",
+    "pytest-cov>=6.2.1",
 ]
