--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "fastapi>=0.116.1",
     "uvicorn>=0.18.0",
     "pydantic>=2.0.0",
+    "gradio>=4.44.0",
     "streamlit>=1.28.0",
     "requests>=2.31.0",
     "google-generativeai>=0.3.0",
@@ -24,6 +25,13 @@ dependencies = [
     "pypdf2>=3.0.1",
     "transformers>=4.55.2",
     "accelerate>=1.10.0",
+    "jinja2>=3.1.0",
+    "networkx>=3.0",
+    "beautifulsoup4>=4.12.0",
+    "lxml>=4.9.0",
+    "instructor>=1.10.0",
+    "reportlab>=4.4.3",
+    "markdown>=3.8.2",
 ]
 
 [build-system]
